# crypto_prices_test_app

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  start.sh
migrations/: env.py
migrations/versions/: fb5cc8243f0f_init.py
src/: config.py
src/application/: exceptions.py
src/application/contracts/: base.py  get_all_ticker_data.py  get_all_ticker_data_filtered.py  get_ticker_last_record.py  update_ticker_data.py
src/application/dtos/: __init__.py  ticker_data.py
src/application/ports/: __init__.py  logger.py  ticker_data_fetcher.py  transaction_manager.py
src/application/use_cases/: __init__.py  base.py  get_all_ticker_data.py  get_all_ticker_data_filtered.py  get_ticker_last_record.py  update_ticker_data.py
src/domain/entities/: __init__.py  base.py  ticker_data.py
src/domain/repositories/: __init__.py  base.py  ticker_data.py
src/infrastructure/: di_config.py  logging.py
src/infrastructure/database/: __init__.py  sqlalchemy_database.py  sqlalchemy_transaction_manager.py
src/infrastructure/database/mappers/: __init__.py  base.py  sqlalchemy_ticker_data_mapper.py
src/infrastructure/database/repositories/: __init__.py  sqlalchemy_repository.py  sqlalchemy_ticker_data_repository.py
src/infrastructure/database/schema/: __init__.py  ticker_data.py
src/infrastructure/external_apis/: __init__.py  deribit_api_client.py  deribit_ticker_data_fetcher.py
src/infrastructure/utils/: __init__.py  stdlib_logger.py
src/interfaces/rest_api/: __init__.py
src/interfaces/rest_api/dependencies/: __init__.py  logger.py  use_cases.py
src/interfaces/rest_api/middlewares/: __init__.py  correlation_id.py  logging.py
src/interfaces/workers/: ticker_worker.py
src/interfaces/workers/tasks/: base.py  (+2 more)
tests/unit/: conftest.py
(+17 files in other folders)
